# PilotRadarsInterface

./: README.md  Readme.txt  Zeta_BopIt_Presentation.txt  Zeta_BopIt_Report.docx
Enclosure/: VDM22_vF.ai
Software/: Software.ino  unocommunicator.h
Software/qt_lib/: CMakeLists.txt  communicator.h  debugwindow.qml  displayable.h  main.cpp  main.qml  mydebugwindowcontroller.h  mygameserver.h  myquickpainteditem.h  playable.h  qtcommunicator.h  test.h
